# as1db

./: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20251125065305_add_master_data.up.sql  20251125091731_add_items.up.sql  20251125093113_add_item_categories.up.sql  20251125102915_add_item_effects.up.sql  20251125103347_add_item_traits.up.sql  20251125112403_add_trait_compositions.up.sql  20251127080948_add_material_items.up.sql  20251127082652_add_material_categories.up.sql  schema.sql
backend/src/: context.rs  datasets.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  views.rs
backend/src/handlers/: categories.rs  classes.rs  items.rs
backend/src/repositories/: category.rs  class.rs  item.rs  item_with_details.rs
backend/tests/: categories_test.rs  classes_test.rs  items_test.rs
backend/tests/common/: mod.rs
backend/tests/fixtures/: categories.sql  classes.sql  item_categories.sql  items.sql  materials.sql
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  CategoriesView.vue  ClassesView.vue  ItemView.vue  ItemsOfCategoryView.vue  ItemsOfClassView.vue  api.ts  constants.ts  models.ts
schema/: package-lock.json  package.json
schema/prisma/: schema.prisma
tools/: Gemfile  create_graphdb.rb  import_item_categories.rb  import_items.rb  import_material_categories.rb  import_material_items.rb  import_trait_compositions.rb  setup_migrations_for_backend.rb  update_migration_for_testing.sh
(+12 files in other folders)
