[package]
name = "as1db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"
actix-web = "4.12.1"
anyhow = "~1.0.100"
env_logger = "~0.11.8"
envy = "~0.4.2"
log = "~0.4.28"
serde = "~1.0.228"
serde_derive = "~1.0.226"
serde_json = "~1.0.145"
sqlx = { version = "~0.8.6", features = ["chrono", "runtime-tokio", "postgres"] }
thiserror = "~2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
